[package]
name = "anvil"
version = "0.1.0"
authors = ["besuper <16976439+besuper@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1" }
#laminar = "0.4.0"
#byteio = "0.2.3"
#bincode = "1.3.2"
#serde = { version = "1.0.125", features = ["derive"] }
#serde_bytes = "0.11.5"
#bytebuffer = "0.2.1"
packet_derive = {path = "./packet_derive"}
encoding = "0.2.33"