[package]
name = "anvil"
version = "0.1.0"
authors = ["besuper <16976439+besuper@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros","rt-multi-thread"]} # , features = ["full"] 
# tokio-util = { version = "0.6.3", features = ["full"] }
# tokio-stream = { version = "0.1" }
# packet_derive = {path = "./packet_derive"}
# encoding = "0.2.33"
# either = "1.6.1"
# async-trait = "0.1.48"
# miniz_oxide = "0.4.4"
# raknet = {path = "./raknet"}
server = {path = "./server"}
mcpe_protocol = {path = "./mcpe_protocol"}