[package]
name = "mcpe_protocol"
version = "0.1.0"
authors = ["ccgauche"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet_derive = {path = "./packet_derive"}
serde = { version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
base64 = "0.13.0"
lazy_static = "1.4.0"