[package]
name = "server"
version = "0.1.0"
authors = ["ccgauche <gaucheron.laurent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raknet = {path = "../raknet"}
mcpe_protocol = {path = "../mcpe_protocol"}
tokio = { version = "1", default_features = false, features = ["net","rt-multi-thread"]}